==> kenlee-gz/NaviEasyV1/CC1101.cpp <==
#include "CC1101.h"
#include "Debug.h"
#include "SimpleIn.h"
#define RF_10db

unsigned char CC1101::ReadStatus(unsigned char addr)
{
    unsigned char x;
    _csn = 0;
    wait_us(2);
    while (_RDmiso)
        ;
    _spi.write(addr | READ_BURST);
    x = _spi.write(0);
    wait_us(2);
    _csn = 1;
    return x;
}

void CC1101::init(const RF_SETTINGS *pRfSettings)
{
    _csn = 1;

    // Setup the spi for 8 bit data, high steady state clock,
    // second edge capture, with a 1MHz clock rate
    _spi.format(8, 0);
    _spi.frequency(500000);

    wait_ms(5);
    POWER_UP_RESET_CCxxx0();
    Strobe(CCxxx0_SRX);
    wait_ms(5);

    WriteRfSettings(pRfSettings);
    WriteReg(CCxxx0_PATABLE, paTable[0]);
}

void CC1101::init(const uint8_t *pRfSettings)
{
    _csn = 1;
//    _gdo0.mode(PullUp);
    _gdo2.mode(PullUp);

    // Setup the spi for 8 bit data, high steady state clock,
    // second edge capture, with a 1MHz clock rate
    _spi.format(8, 0);
    _spi.frequency(500000);
    wait_ms(5);

    POWER_UP_RESET_CCxxx0();
    Strobe(CCxxx0_SRX);

    wait_ms(5);
    for(int i = 0; i < 47; i++)
    {
        WriteReg(i, *((uint8_t*)pRfSettings+i));
    }
    WriteReg(CCxxx0_PATABLE, paTable[0]);
}

unsigned char CC1101::ReadReg(unsigned char addr)
{
    unsigned char x;
    wait_us(5);
    _csn = 0;
    wait_us(2);
    while (_RDmiso)
        ;
    _spi.write(addr | READ_SINGLE);
    x = _spi.write(0);
    wait_us(2);
    _csn = 1;
    return x;
}

void CC1101::WriteReg(unsigned char addr, unsigned char value)
{
    wait_us(5);
    _csn = 0;
    wait_us(2);
    while (_RDmiso)
        ;
    _spi.write(addr);
    _spi.write(value);
    wait_us(2);
    _csn = 1;
}

int CC1101::ReceivePacket(unsigned char *rxBuffer, unsigned char *length)
{
    unsigned char status[2];
    unsigned char packetLength;

    packetLength = ReadStatus(CCxxx0_RXBYTES);
    if (packetLength & BYTES_IN_RXFIFO)
    {
        // Read length byte
        packetLength = ReadReg(CCxxx0_RXFIFO);

        // Read data from RX FIFO and store in rxBuffer
        if (packetLength <= *length)
        {
            ReadBurstReg(CCxxx0_RXFIFO, rxBuffer, packetLength);
            *length = packetLength;

            // Read the 2 appended status bytes (status[0] = RSSI, status[1] = LQI)
            ReadBurstReg(CCxxx0_RXFIFO, status, 2);

            rssi_ = status[RSSI];
            lqi_ = status[LQI];
            // MSB of LQI is the CRC_OK bit
//            return (status[LQI] & CRC_OK);
            if (status[LQI] & CRC_OK)
            {
                return 1;
            }
        }
        else
        {
//            printf("too big packet length=%u/%u RXBYTES=%u\r\n", packetLength, *length, bytes);
            *length = packetLength;

            // Make sure that the radio is in IDLE state before flushing the FIFO
            // (Unless RXOFF_MODE has been changed, the radio should be in IDLE state at this point)
            Strobe(CCxxx0_SIDLE);

            // Flush RX FIFO
            Strobe(CCxxx0_SFRX);
            return 0;
        }
    }
    else
        return 0;
    return 0;
}

int CC1101::ReceivePacket(unsigned char *rxBuffer)
{
    unsigned char status[2];
    unsigned char packetLength;

    packetLength = ReadStatus(CCxxx0_RXBYTES);
    if (packetLength & BYTES_IN_RXFIFO)
    {
        // Read length byte
        packetLength = ReadReg(CCxxx0_RXFIFO);

        // Read data from RX FIFO and store in rxBuffer
        if (packetLength <= rxBuffer[0])
        {
            ReadBurstReg(CCxxx0_RXFIFO, rxBuffer+1, packetLength);
            rxBuffer[0] = packetLength;

            // Read the 2 appended status bytes (status[0] = RSSI, status[1] = LQI)
            ReadBurstReg(CCxxx0_RXFIFO, status, 2);

            rssi_ = status[RSSI];
            lqi_ = status[LQI];
            // MSB of LQI is the CRC_OK bit
//            return (status[LQI] & CRC_OK);
            if (status[LQI] & CRC_OK)
            {
                return 1;
            }
        }
        else
        {
//            printf("too big packet length=%u/%u RXBYTES=%u\r\n", packetLength, *length, bytes);
            rxBuffer[0] = packetLength;

            // Make sure that the radio is in IDLE state before flushing the FIFO
            // (Unless RXOFF_MODE has been changed, the radio should be in IDLE state at this point)
            Strobe(CCxxx0_SIDLE);

            // Flush RX FIFO
            Strobe(CCxxx0_SFRX);
            return 0;
        }
    }
    else
        return 0;
    return 0;
}

bool CC1101::ReceivePacket(unsigned char *rxBuffer, int max_len)
{
    unsigned char status[2];
    unsigned char packetLength;

    packetLength = ReadStatus(CCxxx0_RXBYTES);
    if (packetLength & BYTES_IN_RXFIFO)
    {
        packetLength = ReadReg(CCxxx0_RXFIFO);

        if (packetLength <= max_len)
        {
            ReadBurstReg(CCxxx0_RXFIFO, rxBuffer+1, packetLength);
            rxBuffer[0] = packetLength;

            ReadBurstReg(CCxxx0_RXFIFO, status, 2);

            rssi_ = status[RSSI];
            lqi_ = status[LQI];
            if (status[LQI] & CRC_OK)
            {
                return true;
            }
        }
        else
        {
            rxBuffer[0] = packetLength;

            Strobe(CCxxx0_SIDLE);

            Strobe(CCxxx0_SFRX);
        }
    }
    else
    {
        packetLength = ReadReg(CCxxx0_RXFIFO);
    }
    return false;
}

void CC1101::SendPacket(const void *txBuffer, unsigned char size)
{
    unsigned char i;
//    unsigned char buf[64];

//    buf[0] = size;
//    for (i = 0; i < size; i++)
//        buf[i + 1] = txBuffer[i];

//    WriteBurstReg(CCxxx0_TXFIFO, buf, size + 1);
#if 1
    FlushTX();
    WriteBurstReg(CCxxx0_TXFIFO, txBuffer, size);
#else
    WriteBurstReg(CCxxx0_TXFIFO, txBuffer, size);
    Strobe(CCxxx0_SIDLE);
#endif
    Strobe(CCxxx0_STX);

    //////////////////////////////////////////////////////////////////////////////////////////////
    // To send subsequent packet we should ensure packet is sent before return this function
    //////////////////////////////////////////////////////////////////////////////////////////////
    // Following check routine is valid when IOCFG2=0x06 is set.
    unsigned t;
    const unsigned safe_check_count = 1000000;

    t = 0;
    // Wait for GDO2 to be set -> sync transmitted
    while (!_gdo2 && t++ < safe_check_count)
        ;
    if (t == safe_check_count)
    {
//        printf("check timeout 1\r\n");
    }

    // Wait for GDO2 to be cleared -> end of packet
    t = 0;
    while (_gdo2 && t++ < safe_check_count)
        ;

    if (t == safe_check_count)
    {
//        printf("check timeout 2\r\n");
    }

}
